doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\cheny16\Desktop\ItlizeOrientation\hw\FirstAssignment
-d
C:\Users\cheny16\Desktop\ItlizeOrientation\hw\FirstAssignment\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\cheny16\Desktop\ItlizeOrientation\hw\FirstAssignment\StringArrayUtils.java
<---- end of javadoc command ---->
Loading source file C:\Users\cheny16\Desktop\ItlizeOrientation\hw\FirstAssignment\StringArrayUtils.java...
Constructing Javadoc information...
C:\Users\cheny16\Desktop\ItlizeOrientation\hw\FirstAssignment\StringArrayUtils.java:7: error: cyclic inheritance involving StringArrayUtils
public class StringArrayUtils extends StringArrayUtils {
       ^
1 error
